--- a/05_Shop_MultiProduct/Views/Home/Index.cshtml
+++ b/05_Shop_MultiProduct/Views/Home/Index.cshtml
@@ -165,7 +165,7 @@
                                                         </div>
                                                     </div>
                                                     <div class="add_cart">                                                        
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@saleList[i].Id,@saleList[i].Price,'@saleList[i].Images','@saleList[i].PrName');"><span>Mua ngay</span></button>
+                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@saleList[i].Id,'@saleList[i].Price','@saleList[i].Images','@saleList[i].PrName');"><span>Mua ngay</span></button>
                                                     </div>
                                                 </div>
                                             </div>
