--- a/02_BDS_BatDongSan_MultiLand/Views/Shared/product/_productDetail.cshtml
+++ b/02_BDS_BatDongSan_MultiLand/Views/Shared/product/_productDetail.cshtml
@@ -76,7 +76,7 @@
                     <div class="button-group">
                         @if (item.IsInstock)
                         {
-                            <a  href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')"><img src="~/assets/images/dangky.gif" title="tư vấn bất động sản"/> </a>
+                            <a  href="javascript:Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName')"><img src="~/assets/images/dangky.gif" title="tư vấn bất động sản"/> </a>
 
                         }
                         else
