--- a/03_HR_Service_Frontend/Views/Product/Index.cshtml
+++ b/03_HR_Service_Frontend/Views/Product/Index.cshtml
@@ -121,7 +121,7 @@
                                     <div class="button-group">
                                         @if (item.IsInstock)
                                         {
-                                        <a class="btn-add-cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">Chọn</a>
+                                        <a class="btn-add-cart" href="javascript:Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName')">Chọn</a>
                                         }
                                         else
                                         {
