--- a/04_Shop_multiProduct/Views/Product/Category.cshtml
+++ b/04_Shop_multiProduct/Views/Product/Category.cshtml
@@ -56,7 +56,7 @@
                                                     <a title="Quick view" class="search" href="@Anpero.StringHelpper.GetProductLink(item.PrName, item.Id)"></a>
                                                 </div>
                                                 <div class="add-to-cart">
-                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName')">thêm vào giỏ hàng</a>
+                                                    <a title="Add to Cart" href="javascript:Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName')">thêm vào giỏ hàng</a>
                                                 </div>
                                             </div>
                                             <div class="right-block">
