--- a/10_Theme_09_v2/Views/Home/Index.cshtml
+++ b/10_Theme_09_v2/Views/Home/Index.cshtml
@@ -70,14 +70,7 @@
                                                     <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a>
                                                 </div>
                                                 <div class="item-content">
-                                                    <div class="rating">
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div class="rating" style="width:80%"></div>
-                                                            </div>
-                                                            <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                                        </div>
-                                                    </div>
+                                                    <div class="hTag">@item.Tag</div>                                                  
                                                     <div class="item-price">
                                                         <div class="price-box">
                                                             <span class="regular-price" id="product-price-1">
@@ -96,7 +89,7 @@
                                                     <div class="add_cart">
                                                         <a class="button btn-cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">Xem thêm</a>
                                                       
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua hàng</span></button>
+                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName');"><span>Mua hàng</span></button>
                                                     </div>
                                                 </div>
                                             </div>
@@ -148,14 +141,10 @@
                                                     <a href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">@item.PrName</a> 
                                                 </div>
                                                 <div class="item-content">
-                                                    <div class="rating">
-                                                        <div class="ratings">
-                                                            <div class="rating-box">
-                                                                <div class="rating" style="width:80%"></div>
-                                                            </div>
-                                                            <p class="rating-links"><a href="#">1 Review(s)</a> <span class="separator">|</span> <a href="#">Add Review</a> </p>
-                                                        </div>
-                                                    </div>
+                                                                                                                                                 
+                                                    <div class="hTag">@item.Tag</div>                                                        
+                                                    <div class="Specifications">@item.Specifications</div>                                                        
+                                                  
                                                     <div class="item-price">
                                                         <div class="price-box">
                                                             <span class="regular-price" id="product-price-1">
@@ -173,8 +162,14 @@
                                                     </div>
                                                     <div class="add_cart">
                                                         <a class="button btn-cart" href="@Anpero.StringHelpper.GetProductLink(item.PrName,item.Id)" title="@item.PrName">Xem thêm</a>
-                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span>Mua hàng</span></button>
-                                                    </div>
+                                                       @if (item.IsInstock)
+                                                       {
+                                                        <button class="button btn-cart" type="button" onclick="Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName');"><span>Mua hàng</span></button>
+                                                       }
+                                                       else
+                                                       {
+                                                        <button class="button btn-cart" type="button" onclick="javascript:void(0);"><span>Hết Hàng</span></button>
+                                                       }</div>
                                                 </div>
                                             </div>
                                         </div>
