--- a/10_Theme_09_v2/Views/Product/Index.cshtml
+++ b/10_Theme_09_v2/Views/Product/Index.cshtml
@@ -76,11 +76,11 @@
                                             <h1 itemprop="name">@item.PrName</h1>
                                         </div>
                                         <span itemprop="aggregateRating" itemscope="" itemtype="http://schema.org/AggregateRating">
-                                            <div class="rating">
+                                            
                                                 <div class="ratings">
                                                     <p class="rating-links"><a href="tel:@commonInfo.HotLine">Gọi: @commonInfo.HotLine hoặc click mua ngay để đặt hàng</a> </p>
                                                 </div>
-                                            </div>
+                                       
                                         </span>
                                         <div class="price-block">
                                             <div class="price-box"> 
@@ -124,7 +124,7 @@
                                                         <button onclick="var result = document.getElementById('qty'); var qty = result.value; if( !isNaN( qty )) result.value++;return false;" class="increase items-count" type="button"><i class="icon-plus">&nbsp;</i></button>                                                        
                                                     </div>
                                                 </div>
-                                                <button type="button" title="Add to Cart" class="button btn-cart" onclick="Cart.addProduct(@item.Id,@item.Price,'@item.Images','@item.PrName');"><span><i class="icon-basket"></i>Mua ngay</span></button>
+                                                <button type="button" title="Add to Cart" class="button btn-cart" onclick="Cart.addProduct(@item.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@item.Images','@item.PrName');"><span><i class="icon-basket"></i>Mua hàng</span></button>
                                             </div>
                                             <div class="email-addto-box">                                                
                                                 <p class="add-to-links"><a class="link-wishlist" href="http://www.facebook.com/share.php?u=@ViewBag.WebsiteUrl" onclick="" title="Add To Wishlist"><span>Add To Wishlist</span></a></p>                                               
@@ -214,7 +214,7 @@
                                                                                 
                                                                             </div>
                                                                             <div class="add_cart">
-                                                                                <button class="button btn-cart" type="button" onclick="Cart.addProduct(@items.Id,@items.Price,'@items.Images','@items.PrName');"><span>Mua ngay</span></button>
+                                                                                <button class="button btn-cart" type="button" onclick="Cart.addProduct(@items.Id,'@Anpero.StringHelpper.ConVertToMoneyFormatInt(item.Price)','@items.Images','@items.PrName');"><span>Mua hàng</span></button>
                                                                             </div>
                                                                         </div>
                                                                     </div>
