--- a/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
+++ b/10_Theme_09_v2/Views/Shared/_partial/_MainFooter_1.cshtml
@@ -257,8 +257,8 @@
             <ul>
                 <li><a href="/blog">Blogs</a></li>
                 <li><a href="/chinh-sach-van-chuyen-a86">Vận chuyển</a></li>
-                <li><a href="/chinh-sach-doi-tra-hang-tai-ngonlan-a84">Chính sách đổi trả</a></li>
-                <li><a href="/huong-dan-thanh-toan-khi-mua-hang-t-a85">Hướng dẫn thanh toán</a></li>
+                <li><a href="/ProductReturnPolicy">Chính sách đổi trả</a></li>
+                <li><a href="/PaymentInfo">Hướng dẫn thanh toán</a></li>
             </ul>
         </li>
         <li><a href="/home/contact">Liên hệ</a></li>
